--- a/AdvanceSelenium/test-output/emailable-report.html
+++ b/AdvanceSelenium/test-output/emailable-report.html
@@ -8,13 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">50,195</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,817</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Campaigns.CreateCampaignsTest</td><td><a href="#m0">createCampaignsTest</a></td><td rowspan="1">1752029820489</td><td rowspan="1">9198</td></tr><tr class="passedodd"><td rowspan="1">Campaigns.CreateCapaingnsProductTest</td><td><a href="#m1">createCapaingnsProductTest</a></td><td rowspan="1">1752029833362</td><td rowspan="1">16196</td></tr><tr class="passedeven"><td rowspan="1">ContactPage.CreateContactTest</td><td><a href="#m2">createContactTest</a></td><td rowspan="1">1752029855171</td><td rowspan="1">9002</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Campaigns.CreateCampaignsTest</td><td><a href="#m0">createCampaignsTest</a></td><td rowspan="1">1753115522274</td><td rowspan="1">7868</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Campaigns.CreateCampaignsTest#createCampaignsTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Campaigns.CreateCapaingnsProductTest#createCapaingnsProductTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">ContactPage.CreateContactTest#createContactTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Campaigns.CreateCampaignsTest#createCampaignsTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
